name:          engine
category:      Graphics
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/engine/
bug-reports:   http://github.com/ekmett/engine/issues
copyright:     Copyright (C) 2014 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 7.8.3
synopsis:      Engine
description:   Engine

extra-source-files:
  .ghci
  .gitignore
  .vim.custom
  HLint.hs
  CHANGELOG.markdown
  README.markdown

data-dir: data
data-files: screen.vert smaa.glsl

source-repository head
  type: git
  location: git://github.com/ekmett/engine.git

library
  exposed-modules:
    Engine.Generator
    Engine.SDL.Basic
    Engine.SDL.Exception
    Engine.SDL.Video
    Engine.Shader
  
  build-depends:
    aeson,
    base >= 4.7 && < 5,
    cpphs,
    containers,
    contravariant,
    distributive,
    lens,
    linear,
    mtl,
    OpenGL,
    OpenGLRaw,
    sdl2 >= 1.1.3,
    text,
    transformers

  default-language: Haskell2010
  ghc-options: -Wall -O2

executable engine
  main-is: Main.hs

  build-depends:
    base >= 4.7 && < 5,
    containers,
    engine,
    lens,
    linear,
    mtl,
    MonadRandom,
    OpenGL,
    OpenGLRaw,
    sdl2 >= 1.1.3,
    transformers

  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
