name:          quine
category:      Graphics
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/quine/
bug-reports:   http://github.com/ekmett/quine/issues
copyright:     Copyright (C) 2014 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 7.8.3
synopsis:      Quine
description:   Quine

extra-source-files:
  .ghci
  .gitignore
  .vim.custom
  HLint.hs
  CHANGELOG.markdown
  README.markdown

data-files:
  *.vert *.glsl *.h
  examples/*.frag

source-repository head
  type: git
  location: git://github.com/ekmett/quine.git

flag sdf
  default: False
  manual: True

flag exe
  default: True
  manual: True

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  exposed-modules:
    Quine.Camera
    Quine.Clock
    Quine.Debug
    Quine.Display
    Quine.Env
    Quine.Exception
    Quine.GL
    Quine.GL.Error
    Quine.GL.Object
    Quine.GL.Pixel
    Quine.GL.Program
    Quine.GL.Shader
    Quine.GL.Texture
    Quine.GL.Types
    Quine.GL.Uniform
    Quine.GL.Version
    Quine.GL.VertexArray
    Quine.Image
    Quine.Input
    Quine.Monitor
    Quine.Options
    Quine.SDL
    Quine.StateVar
    Quine.System

  other-modules:
    Paths_quine

  build-depends:
    aeson,
    base >= 4.7 && < 5,
    bytestring,
    clock >= 0.4.1.3,
    containers,
    contravariant >= 1.2,
    cpphs,
    data-default,
    directory,
    distributive,
    ekg,
    filepath,
    gl >= 0.5,
    JuicyPixels,
    lens,
    linear >= 1.12 && < 1.13,
    mtl,
    optparse-applicative,
    primitive,
    process >= 1.2,
    sdl2 >= 1.2,
    stm >= 2.4.2,
    text,
    transformers,
    utf8-string,
    vector,
    void

executable quine
  main-is: Main.hs
  if !flag(exe)
    buildable: False
  else
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2 -v0 -rtsopts -with-rtsopts=-T
    build-depends:
      base >= 4.7 && < 5,
      containers,
      data-default,
      gl,
      quine,
      lens,
      linear,
      mtl,
      MonadRandom,
      optparse-applicative,
      sdl2,
      time,
      transformers
  
executable quine-sdf
  main-is: SDF.hs
  if !flag(sdf)
    buildable: False
  else
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2 -v0 -rtsopts -with-rtsopts=-T
    build-depends:
      base >= 4.7 && < 5,
      containers,
      data-default,
      gl,
      quine,
      lens,
      linear,
      mtl,
      MonadRandom,
      optparse-applicative,
      sdl2,
      time,
      transformers
