name:          quine
category:      Graphics
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/quine/
bug-reports:   http://github.com/ekmett/quine/issues
copyright:     Copyright (C) 2014 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.8.3
synopsis:      Quine
description:   Quine

extra-source-files:
  .ghci
  .gitignore
  .vim.custom
  HLint.hs
  CHANGELOG.markdown
  README.markdown

data-files:
  shaders/*.vert
  shaders/*.geom
  shaders/*.frag
  shaders/*.h

source-repository head
  type: git
  location: git://github.com/ekmett/quine.git

flag exe
  default: True
  manual: True

flag embed
  default: False
  manual: True

flag test-gl
  default: True
  manual: True

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  include-dirs: shaders
  exposed-modules:
    Quine.Camera
    Quine.Clock
    Quine.Debug
    Quine.Display
    Quine.Env
    Quine.Exception
    Quine.Geometry.Beam
    Quine.Geometry.Box
    Quine.Geometry.Frustum
    Quine.Geometry.Normal
    Quine.Geometry.Plane
    Quine.Geometry.Position
    Quine.Geometry.Ray
    Quine.Geometry.Sphere
    Quine.GL
    Quine.GL.Buffer
    Quine.GL.Error
    Quine.GL.Object
    Quine.GL.Pixel
    Quine.GL.Program
    Quine.GL.Shader
    Quine.GL.Texture
    Quine.GL.Types
    Quine.GL.Uniform
    Quine.GL.Version
    Quine.GL.VertexArray
    Quine.Image
    Quine.Input
    Quine.Instances
    Quine.Math
    Quine.Meter
    Quine.Monitor
    Quine.Options
    Quine.Queue
    Quine.Ref
    Quine.SDL
    Quine.Simulation
    Quine.StateVar
    Quine.Supply
    Quine.System
    Quine.Task

  other-modules:
    Paths_quine

  build-depends:
    aeson,
    base >= 4.7 && < 5,
    bytestring,
    comonad >= 4.2.2,
    concurrent-supply,
    containers,
    contravariant >= 1.2,
    data-default,
    directory,
    distributive,
    ekg,
    file-embed,
    filepath,
    fingertree,
    gl >= 0.5,
    half,
    JuicyPixels,
    lens,
    linear >= 1.15.1,
    monad-control >= 0.3.3,
    mtl,
    optparse-applicative,
    primitive,
    process >= 1.2,
    sdl2 >= 1.3,
    semigroups >= 0.9,
    stm >= 2.4.2,
    text,
    transformers,
    utf8-string,
    vector,
    void

executable quine
  main-is: Main.hs
  default-language: Haskell2010
  if !flag(exe)
    buildable: False
  else
    ghc-options: -Wall -threaded -O2 -v0 -rtsopts -with-rtsopts=-T
    include-dirs: shaders
    build-depends:
      base >= 4.7 && < 5,
      containers,
      data-default,
      file-embed,
      filepath,
      gl,
      quine,
      lens,
      linear,
      mtl,
      MonadRandom,
      optparse-applicative,
      sdl2,
      time,
      transformers

test-suite gltest
  main-is: GLTests.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  if !flag(test-gl)
    buildable: False
  else
    ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
    build-depends:
      base,
      containers,
      data-default,
      gl,
      GLFW-b,
      hspec,
      quine,
      vector
